--- a/Projects/annotator.html
+++ b/Projects/annotator.html
@@ -1,7 +1,1 @@
-<!DOCTYPE html>
-<html>
-	<body>
-		<div>Version:2.15.27</div>
-		<div>Date:2022-10-13</div>
-	</body>
-</html>
+{"Version":"2.15.27","Date":"2022-10-13"}
