upload insect annotator zip

--- a/Projects/update.html
+++ b/Projects/update.html
@@ -1,1 +1,1 @@
-<a href="https://arigrele.github.io/Files/test.zip" target="_blank">Download most recent version</a>
+<a href="https://arigrele.github.io/Files/annotator.zip" target="_blank">Click here to download most recent version</a>
