--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <div itemscope itemtype="https://schema.org/Person" class="h-card">
             <div class="author__avatar">
               <a href="https://AriGrele.github.io/">
-              <img src="81997813.jpg" alt="Ari Grele" itemprop="image" class="u-photo">
+              <img src="camera.jpg" alt="Ari Grele" itemprop="image" class="u-photo">
               </a>
             </div>
             <div class="author__content">
