--- a/Projects/BugNet.html
+++ b/Projects/BugNet.html
@@ -1,3 +1,3 @@
-<video width="320" height="240" controls>
-<source src="https://arigrele.github.io/Files/grid1.mp4" type=”video/mp4″>
-</video >
+<video src="../Files/grid2.mp4" width="1280" height="720" type="video/mp4" controls autoplay muted loop></video>
+
+<video src="../Files/species.mp4" width="1280" height="720" type="video/mp4" controls autoplay muted loop></video>
