--- a/Projects/update.html
+++ b/Projects/update.html
@@ -1,1 +1,158 @@
-<a href="https://arigrele.github.io/Files/annotator.zip" target="_blank">Click here to download most recent version</a>
+<!doctype html>
+<!--
+  Minimal Mistakes Jekyll Theme 4.24.0 by Michael Rose
+  Copyright 2013-2020 Michael Rose - mademistakes.com | @mmistakes
+  Free for personal and commercial use under the MIT license
+  https://github.com/mmistakes/minimal-mistakes/blob/master/LICENSE
+  -->
+<html lang="en" class="no-js">
+  <head>
+    <meta charset="utf-8">
+
+    <!-- begin _includes/seo.html -->
+    <title>Ari Grele</title>
+    <meta name="description" content="The personal site of Ari Grele, PhD candidate at the university of Nevada Reno">
+    <meta name="author" content="Ari Grele">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:site_name" content="Ari Grele">
+    <meta property="og:title" content="Ari Grele">
+    <meta property="og:url" content="https://AriGrele.github.io/">
+    <meta property="og:description" content="The personal site of Ari Grele, PhD candidate at the university of Nevada Reno">
+    <link rel="canonical" href="https://AriGrele.github.io/">
+    
+    <script type="application/ld+json">{
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": null,
+        "url": "https://AriGrele.github.io/"}
+    </script>
+    <!-- end _includes/seo.html -->
+
+    <link href="/feed.xml" type="application/atom+xml" rel="alternate" title="Ari Grele Feed">
+    <!-- https://t.co/dKP3o1e -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script>document.documentElement.className = document.documentElement.className.replace(/\bno-js\b/g, '') + ' js ';</script>
+    <!-- For all browsers -->
+    <link rel="stylesheet" href="../main.css">
+    <link rel="preload" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <link rel="preload" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+
+    <noscript>
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5/css/all.min.css">
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
+    </noscript>
+  </head>
+
+  <body class="layout--single">
+    <nav class="skip-links">
+      <ul>
+        <li><a href="#site-nav" class="screen-reader-shortcut">Skip to primary navigation</a></li>
+        <li><a href="#main" class="screen-reader-shortcut">Skip to content</a></li>
+        <li><a href="#footer" class="screen-reader-shortcut">Skip to footer</a></li>
+      </ul>
+    </nav>
+
+    <!--
+    <div class="masthead">
+      <div class="masthead__inner-wrap">
+        <div class="masthead__menu">
+          <nav id="site-nav" class="greedy-nav">
+            <a class="site-title" href="/">
+            Ari Grele
+            </a>
+            <ul class="visible-links">
+              <li class="masthead__menu-item">
+                <a href="/about/">About</a>
+              </li>
+              <li class="masthead__menu-item">
+                <a href="/research/">Research</a>
+              </li>
+              <li class="masthead__menu-item">
+                <a href="/projects/">Projects</a>
+              </li>
+              <li class="masthead__menu-item">
+                <a href="/cv/">CV</a>
+              </li>
+              <li class="masthead__menu-item">
+                <a href="/contact/">Contact</a>
+              </li>
+            </ul>
+            <button class="greedy-nav__toggle hidden" type="button">
+              <span class="visually-hidden">Toggle menu</span>
+              <div class="navicon"></div>
+            </button>
+            <ul class="hidden-links hidden"></ul>
+          </nav>
+        </div>
+      </div>
+    </div>
+    -->
+
+    <div class="initial-content">
+      <div id="main" role="main">
+	  
+        <article class="page h-entry" itemscope itemtype="https://schema.org/CreativeWork">
+          <div class="page__inner-wrap">
+            <header>
+            </header>
+            <section class="page__content e-content" itemprop="text">
+
+		  <h1>Rapid Image annotator - Windows 10-11</h1>
+              <h5><a href="https://arigrele.github.io/Files/RIA-2.5.37.zip" target="_blank">Click here to download most recent version</a></h5>
+		  <h3>Versions:</h3>
+		  <h5><a href="https://arigrele.github.io/Files/RIA-2.5.37.zip" target="_blank">2023-04-17: Version 2.5.37</a></h5>
+		  <p>Feature additions:</p>
+		  <ul>
+			<li>Added keybindings for custom comments</li>
+			<li>Enabled box deselection to add comments to entire image</li>
+			<li>Added cosmetic selections for displaying bounding boxes from corner points, lines from corner points, circles from midpoint and radius</li>
+			<li>Added images remaining and estimated hours remaining to statistics panel</li>
+			<li>Added ability to load custom setting configurations</li>
+		  </ul>
+		  <p>Bug fixes</p>
+		  <ul>
+			<li>Prevented unspecified image directories from causing a crash on start-up</li>
+			<li>Prevented the annotator from attempting to load images from folders that no longer exist</li>
+		  </ul>
+
+		 <h5><a href="https://arigrele.github.io/Files/RIA-2.2.33.zip" target="_blank">2022-10-14: Version 2.2.33</a></h5>
+		  <p>Feature additions:</p>
+		  <ul>
+			<li>Added graphical user interface</li>
+			<li>Added image directory and annotation file loading</li>
+			<li>Added customizable keybindings</li>
+			<li>Added customizable color themes</li>
+			<li>Improved data output format clarity</li>
+		  </ul>
+		  <p>Bug fixes</p>
+		  <ul>
+			<li>Greatly reduced failure rate when loading image data</li>
+			<li>Prevented loading large directories from crashing the application at start-up</li>
+		  </ul>
+
+            </section>
+            <footer class="page__meta">
+            </footer>
+          </div>
+        </article>
+      </div>
+    </div>
+    <div id="footer" class="page__footer">
+      <footer>
+        <div class="page__footer-follow">
+          <ul class="social-icons">
+	    <li><a href="https://scholar.google.com/citations?user=DX_8kKYAAAAJ&hl=en" rel="nofollow noopener noreferrer"><i class="ai ai-google-scholar-square" aria-hidden="true"></i> Google Scholar</a></li>
+          <li><a href="https://orcid.org/0000-0002-0876-7682" rel="nofollow noopener noreferrer"><i class="fab fa-orcid" aria-hidden="true"></i> ORCID</a></li>
+          <li><a href="https://github.com/AriGrele" rel="nofollow noopener noreferrer"><i class="fab fa-fw fa-github" aria-hidden="true"></i> GitHub</a></li>
+	    
+          </ul>
+        </div>
+        <div class="page__footer-copyright">&copy; 2022 Ari Grele. Powered by <a href="https://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>.</div>
+      </footer>
+    </div>
+
+    <script src="main.min.js"></script>
+
+  </body>
+</html>
