--- a/Projects/update.html
+++ b/Projects/update.html
@@ -99,7 +99,7 @@
             <section class="page__content e-content" itemprop="text">
 
 		  <h1>Rapid Image annotator - Windows 10-11</h1>
-              <h5><a href="https://arigrele.github.io/Files/RIA-2.5.37.zip" target="_blank">Click here to download most recent version</a></h5>
+              <h5><a href="https://arigrele.github.io/Files/RIA-2.5.37.zip" target="_blank">Click here to download the most recent version</a></h5>
 		  <h3>Versions:</h3>
 		  <h5><a href="https://arigrele.github.io/Files/RIA-2.5.37.zip" target="_blank">2023-04-17: Version 2.5.37</a></h5>
 		  <p>Feature additions:</p>
@@ -109,6 +109,7 @@
 			<li>Added cosmetic selections for displaying bounding boxes from corner points, lines from corner points, circles from midpoint and radius</li>
 			<li>Added images remaining and estimated hours remaining to statistics panel</li>
 			<li>Added ability to load custom setting configurations</li>
+			<li>Added error logging to /data/errorlog.txt</li>
 		  </ul>
 		  <p>Bug fixes</p>
 		  <ul>
