RIA user folders

--- a/Files/RIA/RIA.html
+++ b/Files/RIA/RIA.html
@@ -111,8 +111,8 @@
 			visibility: visible;
 		}
 	</style>
-<link id='-gd-engine-icon' rel='icon' type='image/png' href='Insect image annotator.icon.png' />
-<link rel='apple-touch-icon' href='Insect image annotator.apple-touch-icon.png'/>
+<link id='-gd-engine-icon' rel='icon' type='image/png' href='RIA.icon.png' />
+<link rel='apple-touch-icon' href='RIA.apple-touch-icon.png'/>
 
 </head>
 <body>
@@ -135,10 +135,10 @@
 		<div id='status-notice' class='godot' style='display: none;'></div>
 	</div>
 
-	<script type='text/javascript' src='Insect image annotator.js'></script>
+	<script type='text/javascript' src='RIA.js'></script>
 	<script type='text/javascript'>//<![CDATA[
 
-		const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"executable":"Insect image annotator","experimentalVK":false,"fileSizes":{"Insect image annotator.pck":15885552,"Insect image annotator.wasm":13351459},"focusCanvas":true,"gdnativeLibs":[]};
+		const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"executable":"RIA","experimentalVK":false,"fileSizes":{"RIA.pck":15863600,"RIA.wasm":13351459},"focusCanvas":true,"gdnativeLibs":[]};
 		var engine = new Engine(GODOT_CONFIG);
 
 		(function() {
