image name fixes

--- a/Projects/Index.html
+++ b/Projects/Index.html
@@ -38,7 +38,7 @@
   </head>
   <body>
     <div class="splash">
-      <img src="../Assets/splash2.jpg" alt="Ari Grele" itemprop="image" style="object-position: 40% 40%; width: 120%">
+      <img src="Assets/splash2.JPG" alt="Header image" itemprop="image" style="object-position: 40% 40%; width: 120%">
     </div>
     <div class="header">
       <div>
