--- a/Projects/update.html
+++ b/Projects/update.html
@@ -45,19 +45,18 @@
         <nav>
           <a class="header title" href="/">Ari Grele</a>
           <ul>
-            <li><a href = "/about/">About</a></li>
-            <li><a href = "/research/">Research</a></li>
-            <li><a href = "/projects.html/">Projects</a></li>
+            <li><a href = "/">About</a></li>
+            <li><a href = "/Research/Index">Research</a></li>
+            <li><a href = "/Projects/Index">Projects</a></li>
           </ul>
-          
           <div class="header dropdown">
             <a>Navigation</a>
             <div class="header dropdown content">
-                <ul>
-                    <li><a href = "/about/">About</a></li>
-                    <li><a href = "/research/">Research</a></li>
-                    <li><a href = "/projects.html/">Projects</a></li>
-                </ul>
+              <ul>
+                <li><a href = "/">About</a></li>
+                <li><a href = "/Research/Index">Research</a></li>
+                <li><a href = "/Projects/Index">Projects</a></li>
+              </ul>
             </div>
           </div>
             
