--- a/Research/Index.html
+++ b/Research/Index.html
@@ -45,17 +45,17 @@
         <nav>
           <a class="header title" href="arigrele.github.io/">Ari Grele</a>
           <ul>
-            <li><a href = "arigrele.github.io/">About</a></li>
-            <li><a href = "arigrele.github.io/Research/Index">Research</a></li>
-            <li><a href = "arigrele.github.io/Projects/Index">Projects</a></li>
+            <li><a href = "/">About</a></li>
+            <li><a href = "/Research/Index">Research</a></li>
+            <li><a href = "/Projects/Index">Projects</a></li>
           </ul>
           <div class="header dropdown">
             <a>Navigation</a>
             <div class="header dropdown content">
               <ul>
-                <li><a href = "arigrele.github.io/">About</a></li>
-                <li><a href = "arigrele.github.io/Research/Index">Research</a></li>
-                <li><a href = "arigrele.github.io/Projects/Index">Projects</a></li>
+                <li><a href = "/">About</a></li>
+                <li><a href = "/Research/Index">Research</a></li>
+                <li><a href = "/Projects/Index">Projects</a></li>
               </ul>
             </div>
           </div>
