--- a/Research/Index.html
+++ b/Research/Index.html
@@ -43,7 +43,7 @@
     <div class="header">
       <div>
         <nav>
-          <a class="header title" href="arigrele.github.io/">Ari Grele</a>
+          <a class="header title" href="../About">Ari Grele</a>
           <ul>
             <li><a href = "/">About</a></li>
             <li><a href = "/Research/Index">Research</a></li>
