--- a/About.html
+++ b/About.html
@@ -38,7 +38,7 @@
   </head>
   <body>
     <div class="splash">
-      <img src="../Assets/splash2.JPG" alt="Header image" itemprop="image" style="object-position: 40% 40%; width: 120%">
+      <img src="/Assets/splash2.JPG" alt="Header image" itemprop="image" style="object-position: 40% 40%; width: 120%">
     </div>
     <div class="header">
       <div>
@@ -76,7 +76,7 @@
                 <a rel="me" href="https://AriGrele.github.io/" itemprop="url">Ari Grele</a>
               </h3>
               <div itemprop="description">
-                <p>TBA</p>
+                <p>I'm a fourth year PhD candidate in EECB at the University of Nevada, Reno, interested in chemical ecology, pollinator beahvior, and machine learning.</p>
               </div>
             </div>
             <div>
