--- a/About.html
+++ b/About.html
@@ -102,8 +102,16 @@
         </div>
         <article class="main content" itemscope itemtype="https://schema.org/CreativeWork">
           <div>
-            <section itemprop="text">
-              <p>TBA</p>
+            <section class="about" itemprop="text">
+              <p>I'm currently in the fourth year of my PhD studying chemical ecology in the EECB program at the University of Nevada Reno. I recieved my BS in entomology from Cornell university in <span>2019</span>, where I worked in labs broadly studying non-consumptive effects of predators, induced plant defenses, and how chemcial signaling mediates pollinator and social insect behavior.</p>
+              <p>My current research interests include</p>
+              <ul style="text-align: left;">
+                <li>Latitudinal gradients in species interactions and functional diveristy</li>
+                <li>The role of plant physical and chemical traits in mediated herbivore and pollinator interactions</li>
+                <li>The chemodiveristy and adaptive role of nectar toxins</li>
+                <li>global patterns of semiochemcial richness</li>
+                <li>The application of machine learning and computer vision for rapid surveys of biodiversity.</li>
+		  </ul>
             </section>
           </div>
         </article>
@@ -111,18 +119,7 @@
     </div>
     <div class="footer">
       <footer>
-        <div class="footer links">
-          <ul>
-            <li><a href="https://scholar.google.com/citations?user=DX_8kKYAAAAJ&hl=en" rel="nofollow noopener noreferrer">
-              <i class="ai ai-google-scholar-square" aria-hidden="true"></i> Google Scholar</a></li>
-            <li><a href="https://orcid.org/0000-0002-0876-7682" rel="nofollow noopener noreferrer">
-              <i class="fab fa-orcid" aria-hidden="true"></i> ORCID</a></li>
-            <li><a href="https://www.researchgate.net/profile/Ari-Grele" rel="nofollow noopener noreferrer">
-              <i class="fab fa-fw fa-researchgate" aria-hidden="true"></i> Research Gate</a></li>
-            <li><a href="https://github.com/AriGrele" rel="nofollow noopener noreferrer">
-              <i class="fab fa-fw fa-github" aria-hidden="true"></i> GitHub</a></li>
-          </ul>
-        </div>
+        <div class="footer links"></div>
         <div class="footer copyright">
           <p>&copy; <span>2023</span> Ari Grele.</p>
         </div>
