--- a/About.html
+++ b/About.html
@@ -72,9 +72,6 @@
               </a>
             </div>
             <div>
-              <h3 itemprop="name">
-                <a rel="me" href="https://AriGrele.github.io/" itemprop="url">Ari Grele</a>
-              </h3>
               <div itemprop="description">
                 <p>I'm a fourth year PhD candidate in EECB at the University of Nevada, Reno, interested in chemical ecology, pollinator beahvior, and machine learning.</p>
               </div>
@@ -107,9 +104,9 @@
               <p>My current research interests include</p>
               <ul style="text-align: left;">
                 <li>Latitudinal gradients in species interactions and functional diveristy</li>
-                <li>The role of plant physical and chemical traits in mediated herbivore and pollinator interactions</li>
-                <li>The chemodiveristy and adaptive role of nectar toxins</li>
-                <li>global patterns of semiochemcial richness</li>
+                <li>The role of plant physical and chemical traits in mediating herbivore and pollinator interactions</li>
+                <li>Intra and interspecific variation in nectar chemistry and the adaptive role of nectar toxins</li>
+                <li>global patterns of semiochemical richness</li>
                 <li>The application of machine learning and computer vision for rapid surveys of biodiversity.</li>
 		  </ul>
             </section>
