--- a/About.html
+++ b/About.html
@@ -106,7 +106,7 @@
                 <li>Latitudinal gradients in species interactions and functional diveristy</li>
                 <li>The role of plant physical and chemical traits in mediating herbivore and pollinator interactions</li>
                 <li>Intra and interspecific variation in nectar chemistry and the adaptive role of nectar toxins</li>
-                <li>global patterns of semiochemical richness</li>
+                <li>Global patterns of semiochemical richness</li>
                 <li>The application of machine learning and computer vision for rapid surveys of biodiversity.</li>
 		  </ul>
             </section>
