--- a/Research/Index.html
+++ b/Research/Index.html
@@ -67,10 +67,13 @@
         <div class="main sidebar">
           <div>
             <div>
+              <h1>Current research projects</h1>
+            </div>
+            <div>
               <ul>
-                <li>1</li>
-                <li>2</li>
-                <li>3</li>
+                <li>Plant mediated insect interactions</li>
+                <li>Adaptive nectar toxins</li>
+                <li>AI insect identification</li>
               <ul>
             </div>
             <div>
@@ -80,7 +83,7 @@
         <article class="main content" itemscope itemtype="https://schema.org/CreativeWork">
           <div>
             <section itemprop="text">
-              <p>TBA</p>
+              <p>Current research projects</p>
             </section>
           </div>
         </article>
