added software page

--- a/Software/Index.html
+++ b/Software/Index.html
@@ -69,11 +69,11 @@
         <div class="main sidebar">
           <div>
 	    <div>
-	      <h1>Current Projects<h1>
+	      <h1>Software<h1>
 	    </div>
             <div>
               <ul>
-                <li>XPRIZE Rainforest</li>
+                <li>Rapid Image Annotator</li>
               <ul>
             </div>
             <div>
@@ -83,7 +83,7 @@
         <article class="main content" itemscope itemtype="https://schema.org/CreativeWork">
           <div>
             <section itemprop="text">
-              <p>Current Projects</p>
+              <p>Software</p>
             </section>
           </div>
         </article>
