--- a/About.html
+++ b/About.html
@@ -48,6 +48,7 @@
             <li><a href = "/">About</a></li>
             <li><a href = "/Research/Index">Research</a></li>
             <li><a href = "/Projects/Index">Projects</a></li>
+	    <li><a href = "/Software/Index">Software</a></li>
           </ul>
           <div class="header dropdown">
             <a>Navigation</a>
@@ -56,6 +57,7 @@
                 <li><a href = "/">About</a></li>
                 <li><a href = "/Research/Index">Research</a></li>
                 <li><a href = "/Projects/Index">Projects</a></li>
+	        <li><a href = "/Software/Index">Software</a></li>
               </ul>
             </div>
           </div>
