--- a/Research/Index.html
+++ b/Research/Index.html
@@ -73,11 +73,11 @@
             </div>
             <div>
               <ul>
-                <li>Plant mediated insect interactions</li>
-                <li>Adaptive nectar toxins</li>
-                <li>AI insect identification</li>
-                <li>Publications</li>
-                <li>Presentations</li>
+                <li class="simplify"><a href="#c1">Plant mediated insect interactions</a></li>
+                <li class="simplify"><a href="#c2">Adaptive nectar toxins</a></li>
+                <li class="simplify"><a href="#c3">AI insect identification</a></li>
+                <li><a href="#p1">Publications</a></li>
+                <li><a href="#p2">Presentations</a></li>
               <ul>
             </div>
             <div>
@@ -87,24 +87,26 @@
         <article class="main content" itemscope itemtype="https://schema.org/CreativeWork">
           <div>
             <section itemprop="text">
-              <h1>Current research projects</h1>
-              <h2>Publications</h2>
-              <h4><b>*</b> Indicates preprints</h4>
+              <h1 id="c1">Plant mediated insect interactions</h2>
+              <h1 id="c2">The adaptive role of specialized necar chemistry</h2>
+              <h1 id="c3">Using computer vision for automatic insect surveys</h2>
+              <h1 id="p1">Publications</h2>
+              <p style="font-size:14px;"><b>*</b> Indicates preprints</p>
               <ul style="list-style-type: none">
-                <li>* <b>Grele A</b>, Massad TJ, Uckele KA, Dyer L, Antonini Y, Braga L, Forister ML, Sulca-Garro L, Kato M, Lopez HG, Nascimento AR. Intra and interspecific diversity in a tropical plant clade alter herbivory and ecosystem resilience. bioRxiv. <span>2023:2023-03</span>.</li>
+                <li style="list-style-type:'*  '"><b>Grele A</b>, Massad TJ, Uckele KA, Dyer L, Antonini Y, Braga L, Forister ML, Sulca-Garro L, Kato M, Lopez HG, Nascimento AR. Intra and interspecific diversity in a tropical plant clade alter herbivory and ecosystem resilience. bioRxiv. <span>2023:2023-03</span>.</li>
                 <p></p>
-                <li>* Massad T, Nascimento AR, Campos D, Simba<span>ñ</span>a W, Lopez HG, Garro LS, Lepesqueur C, Richards L, Forister M, Stireman J, Tepe E, <b>Grele, A</b>, Dyer L. Broad patterns in the distribution of herbivory are elusive due to the importance of local scale variation and differences between specialist and generalist herbivores. <span>2022</span></li>
+                <li style="list-style-type:'*  '">Massad T, Nascimento AR, Campos D, Simba<span>ñ</span>a W, Lopez HG, Garro LS, Lepesqueur C, Richards L, Forister M, Stireman J, Tepe E, <b>Grele, A</b>, Dyer L. Broad patterns in the distribution of herbivory are elusive due to the importance of local scale variation and differences between specialist and generalist herbivores. <span>2022</span></li>
                 <p></p>
                 <li>Getman-Pickering ZL, Campbell A, Aflitto N, <b>Grele A</b>, Davis JK, Ugine TA. LeafByte: A mobile application that measures leaf area and herbivory quickly and accurately. Methods in Ecology and Evolution. <span>2020</span> Feb;<span>11(2):215-21</span>.</li>
               </ul>
-              <h2>Presentations</h2>
-              <h4><b>*</b> Indicates posters, <b><span>†</span></b> indicates talks</h4>
+              <h1 id="p2">Presentations</h1>
+              <p style="font-size:14px;"><b>*</b> Indicates posters, <b><span>†</span></b> indicates talks</p>
                 <ul style="list-style-type: none">
-                  <li>* <b>Grele A</b>, Richards L. Simulated herbivory increases plant fitness by altering floral traits and pollinator behavior. <span>2023</span> Mar <span>2</span>. Gordan Research Conference</li>
+                  <li style="list-style-type:'*  '"><b>Grele A</b>, Richards L. Simulated herbivory increases plant fitness by altering floral traits and pollinator behavior. <span>2023</span> Mar <span>2</span>. Gordan Research Conference</li>
                   <p></p>
-                  <li>* <b>Grele A</b>, Richards L. Using machine learning to study pollination with high temporal and taxonomic resolution. Entomology <span>2022</span> Nov <span>16</span>. ESA.</li>
+                  <li style="list-style-type:'*  '"><b>Grele A</b>, Richards L. Using machine learning to study pollination with high temporal and taxonomic resolution. Entomology <span>2022</span> Nov <span>16</span>. ESA.</li>
                   <p></p>
-                  <li>* <b>Grele A</b>, Aflitto NC, Thaler JS. Species-specific responses of the Colorado potato beetle to pheromone cues of predatory and phytophagous pentatomids. Entomology <span>2018</span> Nov <span>12</span>. ESA.</li>
+                  <li style="list-style-type:'*  '"><b>Grele A</b>, Aflitto NC, Thaler JS. Species-specific responses of the Colorado potato beetle to pheromone cues of predatory and phytophagous pentatomids. Entomology <span>2018</span> Nov <span>12</span>. ESA.</li>
                 </ul>
             </section>
           </div>
