--- a/About.html
+++ b/About.html
@@ -37,9 +37,7 @@
     </noscript>
   </head>
   <body>
-    <div class="splash">
-      <img src="/Assets/splash2.JPG" alt="Header image" itemprop="image" style="object-position: 40% 40%; width: 120%">
-    </div>
+    
     <div class="header">
       <div>
         <nav>
@@ -64,7 +62,17 @@
         </nav>
       </div>
     </div>
-    <div>
+    <div class="splash">
+      <img src="Assets/splash2.JPG" alt="Header image" itemprop="image" style="object-position: 40% 40%; width: 120%;">
+    </div>
+    <div class="main head">
+      <table>
+      </tr>
+      <td style="vertical-align:bottom">
+        <h1>The homepage of Ari Grele</h1>
+      </td></tr></table>
+    </div>
+    <div style="position: relative; background-color: white;">
       <div class="main">
         <div class="main sidebar">
           <div itemscope itemtype="https://schema.org/Person">
@@ -74,9 +82,6 @@
               </a>
             </div>
             <div>
-              <div itemprop="description">
-                <p>I'm a fourth year PhD candidate in EECB at the University of Nevada, Reno, interested in chemical ecology, pollinator beahvior, and machine learning.</p>
-              </div>
             </div>
             <div>
               <ul>
@@ -116,14 +121,25 @@
           </div>
         </article>
       </div>
-    </div>
-    <div class="footer">
-      <footer>
-        <div class="footer links"></div>
-        <div class="footer copyright">
-          <p>&copy; <span>2023</span> Ari Grele.</p>
+        <div class="footer">
+          <footer>
+            <div class="footer links">
+              <ul>
+                <li><a href="https://scholar.google.com/citations?user=DX_8kKYAAAAJ&hl=en" rel="nofollow noopener noreferrer">
+                  <i class="ai ai-google-scholar-square" aria-hidden="true"></i> Google Scholar</a></li>
+                <li><a href="https://orcid.org/0000-0002-0876-7682" rel="nofollow noopener noreferrer">
+                  <i class="fab fa-orcid" aria-hidden="true"></i> ORCID</a></li>
+                <li><a href="https://www.researchgate.net/profile/Ari-Grele" rel="nofollow noopener noreferrer">
+                  <i class="fab fa-fw fa-researchgate" aria-hidden="true"></i> Research Gate</a></li>
+                <li><a href="https://github.com/AriGrele" rel="nofollow noopener noreferrer">
+                  <i class="fab fa-fw fa-github" aria-hidden="true"></i> GitHub</a></li>
+              </ul>
+            </div>
+            <div class="footer copyright">
+              <p>&copy; <span>2023</span> Ari Grele.</p>
+            </div>
+          </footer>
         </div>
-      </footer>
     </div>
   </body>
 </html>
