about index links

--- a/About.html
+++ b/About.html
@@ -33,7 +33,7 @@
       <div class="header">
          <div>
             <nav>
-               <a class="header title" href="../About">Ari Grele</a>
+               <a class="header title" href="../About" style="width: 50px;">Ari Grele</a>
                <ul>
                   <li><a href = "/">About</a></li>
                   <li><a href = "/Research/Index">Research</a></li>
@@ -115,7 +115,7 @@
                <div itemscope itemtype="https://schema.org/Person">
                   <div>
                      <a class="sub_image">
-                     <img src="Assets/onco.JPG" alt="Oncopeltus fasciatus robbing nectar from Asclepias fascicularis" itemprop="image">
+                     <img src="Assets/onco.jpg" alt="Oncopeltus fasciatus robbing nectar from Asclepias fascicularis" itemprop="image">
                      </a>
                   </div>
                   <div>
