fixed header links

--- a/Projects/Index.html
+++ b/Projects/Index.html
@@ -1,67 +1,59 @@
 <!doctype html>
 <html lang="en" class="no-js">
-  <head>
-    <meta charset="utf-8">
-
-    <title>Ari Grele</title>
-  
-    <meta name     = "author"         content = "Ari Grele">
-    <meta name     = "description"    content = "The personal site of Ari Grele, PhD candidate at the university of Nevada Reno">
-    <meta property = "og:description" content = "The personal site of Ari Grele, PhD candidate at the university of Nevada Reno">
-    <meta property = "og:type"        content = "website">
-    <meta property = "og:locale"      content = "en_US">
-    <meta property = "og:site_name"   content = "Ari Grele">
-    <meta property = "og:title"       content = "Ari Grele">
-    <meta property = "og:url"         content = "https://AriGrele.github.io/">
-
-    <link rel="canonical" href="https://AriGrele.github.io/">
-  
-    <script type="application/ld+json">{
-      "@context": "https://schema.org",
-      "@type":    "Person",
-      "name":      null,
-      "url":      "https://AriGrele.github.io/"}
-    </script>
-
-    <link href="/feed.xml" type="application/atom+xml" rel="alternate" title="Ari Grele Feed">
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script>document.documentElement.className = document.documentElement.className.replace(/\bno-js\b/g, '') + ' js ';</script>
-
-    <link rel   = "stylesheet" href = "../style.css">
-    <link rel   = "preload"  href = "https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5/css/all.min.css" as = "style" onload = "this.onload=null; this.rel = 'stylesheet'">
-    <link rel   = "preload"  href = "https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css"   as = "style" onload = "this.onload=null; this.rel = 'stylesheet'">
-    <noscript>
-      <link rel = "stylesheet" href = "https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5/css/all.min.css">
-      <link rel = "stylesheet" href = "https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
-    </noscript>
-  </head>
-  <body>
-    
-    <div class="header">
-      <div>
-        <nav>
-          <a class="header title" href="../About">Ari Grele</a>
-          <ul>
-            <li><a href = "/">About</a></li>
-            <li><a href = "/Research/Index">Research</a></li>
-            <li><a href = "/Projects/Index">Projects</a></li>
-	    <li><a href = "/Software/Index">Software</a></li>
-          </ul>
-          <div class="header dropdown">
-            <a>Navigation</a>
-            <div class="header dropdown content">
-              <ul>
-                <li><a href = "/">About</a></li>
-                <li><a href = "/Research/Index">Research</a></li>
-                <li><a href = "/Projects/Index">Projects</a></li>
-	        <li><a href = "/Software/Index">Software</a></li>
-              </ul>
-            </div>
-          </div>
-        </nav>
+   <head>
+      <meta charset="utf-8">
+      <title>Ari Grele</title>
+      <meta name     = "author"         content = "Ari Grele">
+      <meta name     = "description"    content = "The personal site of Ari Grele, PhD candidate at the university of Nevada Reno">
+      <meta property = "og:description" content = "The personal site of Ari Grele, PhD candidate at the university of Nevada Reno">
+      <meta property = "og:type"        content = "website">
+      <meta property = "og:locale"      content = "en_US">
+      <meta property = "og:site_name"   content = "Ari Grele">
+      <meta property = "og:title"       content = "Ari Grele">
+      <meta property = "og:url"         content = "https://AriGrele.github.io/">
+      <link rel="canonical" href="https://AriGrele.github.io/">
+      <script type="application/ld+json">{
+         "@context": "https://schema.org",
+         "@type":    "Person",
+         "name":      null,
+         "url":      "https://AriGrele.github.io/"}
+      </script>
+      <link href="/feed.xml" type="application/atom+xml" rel="alternate" title="Ari Grele Feed">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <script>document.documentElement.className = document.documentElement.className.replace(/\bno-js\b/g, '') + ' js ';</script>
+      <link rel   = "stylesheet" href = "style.css">
+      <link rel   = "preload"  href = "https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5/css/all.min.css" as = "style" onload = "this.onload=null; this.rel = 'stylesheet'">
+      <link rel   = "preload"  href = "https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css"   as = "style" onload = "this.onload=null; this.rel = 'stylesheet'">
+      <noscript>
+         <link rel = "stylesheet" href = "https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5/css/all.min.css">
+         <link rel = "stylesheet" href = "https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
+      </noscript>
+   </head>
+   <body>
+      <div class="header">
+         <div>
+            <nav>
+               <a class="header title" href="../About" style="width: 50px;">Ari Grele</a>
+               <ul>
+                  <li><a href = "/">About</a></li>
+                  <li><a href = "/Research/Index">Research</a></li>
+                  <li><a href = "/Projects/Index">Projects</a></li>
+                  <li><a href = "/Software/Index">Software</a></li>
+               </ul>
+               <div class="header dropdown">
+                  <a>Navigation</a>
+                  <div class="header dropdown content">
+                     <ul>
+                        <li><a href = "/">About</a></li>
+                        <li><a href = "/Research/Index">Research</a></li>
+                        <li><a href = "/Projects/Index">Projects</a></li>
+                        <li><a href = "/Software/Index">Software</a></li>
+                     </ul>
+                  </div>
+               </div>
+            </nav>
+         </div>
       </div>
-    </div>
     <div class="splashshort">
       <div class="head"></div>
       <img src="../Assets/splash2.JPG" alt="Header image" itemprop="image" style="object-position: 40% 40%; width: 120%;">
