reduced image sizes

--- a/About.html
+++ b/About.html
@@ -56,7 +56,7 @@
       </div>
       <div class="splash">
          <div class="head"></div>
-         <img src="Assets/splash2.JPG" alt="Header image" itemprop="image" style="object-position: 40% 40%; width: 120%;">
+         <img src="Assets/splash2-small.jpg" alt="Header image" itemprop="image" style="object-position: 40% 40%; width: 120%;">
          <p>About Ari ↓</p>
       </div>
       <div style="position: relative; background-color: white;">
@@ -65,7 +65,7 @@
                <div itemscope itemtype="https://schema.org/Person">
                   <div>
                      <a class="avatar">
-                     <img src="Assets/camera.jpg" alt="Ari Grele" itemprop="image">
+                     <img src="Assets/camera-small.jpg" alt="Ari Grele" itemprop="image">
                      </a>
                   </div>
                   <div>
@@ -106,7 +106,7 @@
          </div>
       </div>
       <div class="splashshort">
-         <img src="Assets/fieldcam.JPG" alt="Header image" itemprop="image" style="object-position: 40% 50%; width: 110%;">
+         <img src="Assets/fieldcam-small.JPG" alt="Header image" itemprop="image" style="object-position: 40% 50%; width: 110%;">
          <p>Research</p>
       </div>
       <div style="position: relative; background-color: white;">
@@ -115,7 +115,7 @@
                <div itemscope itemtype="https://schema.org/Person">
                   <div>
                      <a class="sub_image">
-                     <img src="Assets/onco.jpg" alt="Oncopeltus fasciatus robbing nectar from Asclepias fascicularis" itemprop="image">
+                     <img src="Assets/onco-small.jpg" alt="Oncopeltus fasciatus robbing nectar from Asclepias fascicularis" itemprop="image">
                      </a>
                   </div>
                   <div>
@@ -145,7 +145,7 @@
          </div>
       </div>
       <div class="splashshort">
-         <img src="Assets/rainforest.JPG" alt="Header image" itemprop="image" style="object-position: 40% 80%; width: 100%;">
+         <img src="Assets/rainforest-small.JPG" alt="Header image" itemprop="image" style="object-position: 40% 80%; width: 100%;">
          <p>Projects</p>
       </div>
       <div style="position: relative; background-color: white;">
