--- a/Research/Index.html
+++ b/Research/Index.html
@@ -56,7 +56,7 @@
       </div>
       <div class="splashshort">
          <div class="head"></div>
-         <img src="../Assets/fieldcam.JPG" alt="Header image" itemprop="image" style="object-position: 40% 50%; width: 110%;">
+         <img src="../Assets/fieldcam-small.JPG" alt="Header image" itemprop="image" style="object-position: 40% 50%; width: 110%;">
          <p>Current research projects</p>
       </div>
       <div style="position: relative; background-color: white;">
@@ -106,7 +106,7 @@
                <li>
                   <p class="body_text">
                      <a class="side_image">
-                     <img src="../Assets/nectar.png" alt="Accumulated nectar in the hood of an Asclepias speciosa flower" itemprop="image">
+                     <img src="../Assets/nectar-small.png" alt="Accumulated nectar in the hood of an Asclepias speciosa flower" itemprop="image">
                      </a>
                      Although pollination is a multimodal process, with insects making use of visual, olfactory, tactile, and gustatory cues to locate flowers, nectar a major interface between pollinators and plants when on the flower. As such, nectar is an interface through which plants can manipulate insect behavior. Nectar is a high energy reward, and many non-pollinators have developed strategies to consume nectar while bypassing plant structures that deposit pollen. Additionally, many insects pollinate plants with low efficiency, consuming a disproportionate amount of nectar for the amount of pollen they transfer. Chemical means of filtering out low quality pollinators and larcenists, or improving the quality of visiting pollinators, would greatly improve a plant's ability to reproduce. As phytochemical profiles can be altered by plant responses to herbivory, nectar also has the potential to act as a chemical mediator of herbivore-pollinator interactions. The nectar robber hypothesis suggests that nectar chemistry will be directly linked to the identity of visiting pollinators, and that specific compounds present in nectar will be negatively or positively associated with insect taxa in relation to their efficiency as pollinators. The pollinator quality hypothesis suggests that nectar chemistry will drive pollinator behaviors that impact pollination efficiency, such as visitation rate and foraging time
                   </p>
