--- a/Projects/update-updated.html
+++ b/Projects/update-updated.html
@@ -56,7 +56,7 @@
       </div>
     <div class="splashshort">
       <div class="head"></div>
-      <img src="../Assets/splash2.JPG" alt="Header image" itemprop="image" style="object-position: 40% 40%; width: 120%;">
+      <img src="../Assets/splash2-small.JPG" alt="Header image" itemprop="image" style="object-position: 40% 40%; width: 120%;">
 	<p>Current research projects</p>
     </div>
     <div style="position: relative; background-color: white;">
