--- a/Research/Index.html
+++ b/Research/Index.html
@@ -89,7 +89,7 @@
                      <p></p>
                   </ul>
                </div>
-               <li>
+               <li class="text block">
                   <p class="body_text">
                      <a class="side_image">
                      <img src="../Assets/Figure 1.svg" alt="Potential mechanisms of interaction between leaf and nectar feeding insects" itemprop="image" style="border-radius:0px;">
@@ -106,7 +106,7 @@
                      <p></p>
                   </ul>
                </div>
-               <li>
+               <li class="text block">
                   <p class="body_text">
                      <a class="side_image">
                      <img src="../Assets/nectar-small.png" alt="Accumulated nectar in the hood of an Asclepias speciosa flower" itemprop="image">
@@ -122,7 +122,7 @@
                      <p></p>
                   </ul>
                </div>
-               <li>
+               <li class="text block">
                   <p class="body_text">
                      <a class="side_image">
                      <img src="../Assets/bombus.png" alt="Bumblebee with genus level identification assigned by a convolutional neural network" itemprop="image">
