--- a/Research/Index.html
+++ b/Research/Index.html
@@ -143,11 +143,11 @@
                   </li>
                </ul>
                <ul style="list-style-type: none">
-                  <li style="list-style-type:'*  '"><b>Grele A</b>, Massad TJ, Uckele KA, Dyer L, Antonini Y, Braga L, Forister ML, Sulca-Garro L, Kato M, Lopez HG, Nascimento AR. Intra and interspecific diversity in a tropical plant clade alter herbivory and ecosystem resilience. bioRxiv. <span>2023:2023-03</span>.</li>
+                  <li style="list-style-type:'*  '"><b>A. Grele</b>, T. J. Massad, K. A. Uckele, L. Dyer, Y. Antonini, L. Braga, M. L. Forister, L. Sulca-Garro, M. Kato, and H. G. Lopez. 2023. Intra and interspecific diversity in a tropical plant clade alter herbivory and ecosystem resilience. bioRxiv:2023–03.</li>
                   <p></p>
-                  <li style="list-style-type:'*  '">Massad T, Nascimento AR, Campos D, Simba<span>ñ</span>a W, Lopez HG, Garro LS, Lepesqueur C, Richards L, Forister M, Stireman J, Tepe E, <b>Grele, A</b>, Dyer L. Broad patterns in the distribution of herbivory are elusive due to the importance of local scale variation and differences between specialist and generalist herbivores. <span>2022</span></li>
+                  <li style="list-style-type:'*  '">Massad, T., A. R. Nascimento, D. Campos, W. Simbaña, H. G. Lopez, L. S. Garro, C. Lepesqueur, L. Richards, M. Forister, J. Stireman, E. Tepe, K. Uckele, L. Braga, T. Walla, A. Smilanich, <b>A. Grele</b>, and L. Dyer. 2023. Variation in the strength of local and regional determinants of herbivory across the Neotropics.</li>
                   <p></p>
-                  <li>Getman-Pickering ZL, Campbell A, Aflitto N, <b>Grele A</b>, Davis JK, Ugine TA. LeafByte: A mobile application that measures leaf area and herbivory quickly and accurately. Methods in Ecology and Evolution. <span>2020</span> Feb;<span>11(2):215-21</span>.</li>
+                  <li>Getman‐Pickering, Z. L., A. Campbell, N. Aflitto, <b>A. Grele</b>, J. K. Davis, and T. A. Ugine. 2020. LeafByte: A mobile application that measures leaf area and herbivory quickly and accurately. Methods in Ecology and Evolution 11:215–221.</li>
                </ul>
                <ul style="list-style-type: none;padding-left: 0px;">
                   <li>
